# GraST

./: CMakeLists.txt  LICENSE  NOTICE  README.md
apps/: CMakeLists.txt  appDPPath.cc  appGraphProperties.cc  appGrdyMatch.cc  appGrdyMatchFeat.cc  appLdStreamMatch.cc  appNN.cc  appPDEdgecover.cc  appPermuteInput.cc  appPostProcesing.cc  appStreamEC.cc  appStreamECPD.cc  appStreamIO.cc  appStreamMatch.cc  appStreamTwoPassEC.cc  appStreamkDM.cc  appStreamkDMatch.cc  appStreamkMatch.cc  appWriteOMtx.cc
include/GraST/: EdgeCover.h  Graph.h  Match.h  MemUsage.h  MisraGries.h  StreamEC.h  StreamIn.h  StreamMatch.h  StreamkDM.h  StreamkMatch.h  Types.h  Utility.h
src/: CMakeLists.txt  LdStreamMatch.cc  MisraGries.cc  StreamEC.cc  StreamIn.cc  StreamMatch.cc  StreamkDM.cc  StreamkMatch.cc  Utility.cc  dpPath.cc  greedyMatch.cc  ldMatchStandard.cc  ldMatchTwoPhase.cc  ldMatchTwoPhasePar.cc  primalDualEC.cc
